--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ button:focus {
 .container-single {
     color: #4e4e4e;
     max-width: 1200px;
-    padding: 40px 60px;
+    padding: 80px 60px;
     margin: 0 auto;
 }
 
@@ -211,10 +211,28 @@ button:focus {
     padding: 30px 0 80px 0;
 }
 
+.description {
+    margin-bottom: 0;
+}
+
+.single-list, .single-list .col-5
+ {
+    height: 100%;
+}
+.single-cats, .single-details {
+    display: grid;
+    align-content: space-between;
+    height: 100%;
+}
 .single-cats, .single-details {
     font-size: 14px;
     padding: 0;
-    line-height: 2.5;
+    /* line-height: 1.5; */
+    /* line-height: 2.5; */
+}
+
+.single-cats li, .single-details li {
+    /* padding-bottom: 12px; */
 }
 
 .single-cats {
@@ -448,6 +466,11 @@ button:focus {
     background-color: #4e4e4e;
     color: #fff;
 }
+/* PROJECTS PAGE FOOTER */
+.project-page footer .footer-container {
+    max-width: 1200px;
+    padding: 60px 50px;
+}
 
 /* PRATICE PAGE FOOTER */
 .practice-page footer .footer-container {
@@ -506,7 +529,6 @@ footer h3 {
 
     .single-cats, .single-details {
         font-size: 10px;
-        line-height: 2.5;
     }
     /* PEOPLE PAGE */
     .person-name, .person-title {
@@ -635,6 +657,9 @@ footer h3 {
     
 
     /* FOOTER */
+    .project-page footer .footer-container {
+        padding: 60px 30px;
+    }
     .practice-page footer .footer-container {
         padding: 60px 30px;
     }
@@ -668,6 +693,9 @@ footer h3 {
     }
 
     /* FOOTER */
+    .project-page footer .footer-container {
+        padding: 60px 20px;
+    }
     .practice-page footer .footer-container {
         padding: 60px 20px;
     }
