--- a/css/style.css
+++ b/css/style.css
@@ -528,12 +528,28 @@ footer h3 {
 }
 
 .footer-address, .footer-social {
-    height: 150px;
+    height: 160px;
     display: grid;
     align-content: space-between;
 }
 
+.footer-email h3:nth-child(1){
+    padding-top: 3px;
+}
+
 /* ===== MEDIA QUERIES ===== */
+@media(max-width: 1600px) {
+    .contact-content {
+        width: 1000px;
+    }
+    
+    .contact-content .map {
+        height: 559px;
+        margin-bottom: 30px;
+    }
+}
+
+
 @media(max-width: 1500px) {
     .header-brand, .navbar-expand-sm .navbar-nav {
         font-size: 36px;
@@ -558,14 +574,12 @@ footer h3 {
     }
 
     .contact-content {
-        width: 1000px;
+        width: 850px;
     }
     
     .contact-content .map {
-        width: 100%;
-        height: 559px;
+        height: 475px;
         margin-bottom: 30px;
-        background-color: lightgray;
     }
 
 
@@ -579,12 +593,12 @@ footer h3 {
 
     /* CONTACT PAGE */
     .contact-content {
-        width: 700px;
+        width: 600px;
         margin-top: 30px;
     }
     
     .contact-content .map {
-        height: 391px;
+        height: 335px;
         margin-bottom: 10px;
     }
     
@@ -610,12 +624,12 @@ footer h3 {
     }
     /* CONTACT PAGE */
     .contact-content {
-        width: 650px;
+        width: 550px;
         margin-top: 30px;
     }
     
     .contact-content .map {
-        height: 363spx;
+        height: 307px;
     }
 
     .contact-info h2 {
@@ -714,7 +728,7 @@ footer h3 {
     }
     
     .contact-content .map {
-        height: 282px;
+        height: 280px;
     }
 
     .contact-info h2 {
