--- a/css/style.css
+++ b/css/style.css
@@ -74,14 +74,16 @@ li {
 
 .navbar-expand-sm .navbar-nav {
     position: absolute;
-    top: 5px;
+    top: 10px;
     right: 10px;
-    line-height: 1.3;
+    line-height: 1.2;
     flex-direction: column;
+
 }
 
 .header-nav li {
     text-align: right;
+    padding-bottom: 5px;
 }
 
 button:focus {
