--- a/css/style.css
+++ b/css/style.css
@@ -437,21 +437,17 @@ button:focus {
 }
 
 .contact-content {
-    width: 850px;
+    width: 778px;
     margin-top: 60px;
     display: flex;
     flex-direction: column;
 }
 
-.contact-info {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
+
 
 .contact-content .map {
     width: 100%;
-    height: 475px;
+    height: 414px;
     margin-bottom: 30px;
     background-color: lightgray;
 }
@@ -460,36 +456,6 @@ button:focus {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.contact-address, .contact-social {
-    height: 190px;
-    display: grid;
-    align-content: space-between;
-}
-
-
-.contact-info h2 {
-    font-size: 32px;
-    text-transform: uppercase;
-}
-
-.contact-info h3 {
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-
-.contact-info p {
-    font-size: 9px;
-    margin: 0;
-}
-
-.contact-info a:hover {
-    text-decoration: underline;
-}
-
-.contact-email h3:nth-child(1){
-    padding-top: 3px;
 }
 
 
@@ -520,13 +486,20 @@ button:focus {
     width: 65%;
 } */
 
-footer .footer-container {
-    padding: 60px 40px;
+
+footer {
+    width: 100%;
+}
+
+.footer-container {
     max-width: 1000px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+}
+
+.footer-container a {
+    color: #fff
 }
 
 footer h2 {
@@ -539,21 +512,32 @@ footer h3 {
     margin-bottom: 5px;
 }
 
-.footer-address, .footer-social {
+footer p {
+    font-size: 9px;
+    margin-bottom: 0;
+}
+
+.contact-social, .contact-info {
+    display: grid;
+    align-content: space-between;
+}
+
+.contact-address, .contact-social-container {
     height: 160px;
     display: grid;
     align-content: space-between;
 }
 
-
-.footer-social p {
-    font-size: 9px;
-    margin: 14px 0 5px;
+.contact-address h3:nth-of-type(3) {
+    margin-bottom: 1px;
+    line-height: 1;
 }
 
-.footer-email h3:nth-child(1){
-    padding-top: 3px;
+.contact-email h3:nth-of-type(1) {
+    margin-top: 4px;
 }
+
+
 
 /* ===== MEDIA QUERIES ===== */
 @media(max-width: 1600px) {
