--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,7 @@ button:focus {
 .contact-page {
     height: 100%;
     width: 100%;
-    padding: 0 50px;
+    /* padding: 0 50px; */
     overflow: hidden;
     background-color: #ff6b6b;
 }
@@ -440,10 +440,11 @@ button:focus {
     height: 100%;
     margin: 0 auto;
     max-width: 1400px;
+    padding: 0 50px;
 }
 
 .contact-width-container {
-    width: 60%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     position: relative;
@@ -455,9 +456,9 @@ button:focus {
 .contact-content {
     width: 100%;
     margin-top: 60px;
-    padding: 0 30px;
     display: flex;
     flex-direction: column;
+    padding: 0 15px;
 }
 
 
@@ -572,6 +573,10 @@ footer p {
 @media(max-width: 1500px) {
      .container {
         max-width: 1200px
+    }
+
+    .contact-container {
+        max-width: 1200px;
     }
 
     .single-page footer .footer-container,
