--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,13 @@ button:focus {
     z-index: 10;
 }
 
+.practice-showcase {
+    background: url(../img/practice.png) center center/cover no-repeat;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
 .practice-page .container {
     padding-top: 70px;
     padding-bottom: 280px;
